Fix styles for responsive 375 feedback section, duration section. Create burger icon (#5)
* Fix styles duration section

* Fix global styles for body with media

* Make invisible profiles section

* Comment logo

* Add header mobile burger icon styles

* Fix feedback section styles

* Add header__moibile

* Fix styles for img in duration section

--- a/css/duration.css
+++ b/css/duration.css
@@ -29,7 +29,7 @@
   #duration {
     display: grid;
     grid-column: 2 / 3;
-    margin-top: 50px;
+    padding-top: 50px;
     justify-content: center;
   }
 
@@ -52,5 +52,11 @@
   .duration__items-mini__columns {
     display: grid;
     row-gap: 25px;
+  }
+
+  .column__logo img {
+    display: block;
+    width: 100%;
+    height: auto;
   }
 }
